# MinecraftClone

./: CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/src/: Engine.cpp
include/: Callbacks.hpp  Camera.hpp  Engine.hpp  IndexBuffer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp
resources/shaders/: basic.glsl  cube.glsl
src/: Engine.cpp  Game.cpp  IndexBuffer.cpp  Shader.cpp  VertexBuffer.cpp
